--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ p{
 
 .banner-container{
     margin: 0 auto;
-    height: 85vh;
+    height: 95vh;
     padding: 50px 100px;
     background-image: url("images/banner/banner3.png");
     background-repeat: no-repeat;
@@ -115,3 +115,5 @@ p{
     font-size: 20px;
     font-weight: 500;
 }
+
+/* Call to action style */
